--- a/kernel/drivers/char/Makefile
+++ b/kernel/drivers/char/Makefile
@@ -44,3 +44,6 @@ obj-$(CONFIG_PS3_FLASH)		+= ps3flash.o
 obj-$(CONFIG_XILLYBUS_CLASS)	+= xillybus/
 obj-$(CONFIG_POWERNV_OP_PANEL)	+= powernv-op-panel.o
 obj-$(CONFIG_ADI)		+= adi.o
+
+# encos support
+obj-$(CONFIG_ENCOS)		+= encos/
