--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "llama.cpp"]
 	path = llama.cpp
 	url = git@github.com:Icegrave0391/llama.cpp.git
+[submodule "gramine"]
+	path = gramine
+	url = git@github.com:Icegrave0391/gramine.git
