--- a/scripts/.env
+++ b/scripts/.env
@@ -10,5 +10,8 @@ PASSWORD="pks"
 
 LINUXVERSION=6.6
 LINUXFOLDER=$(pwd)/../kernel/
+LINUXFOLDER_NATIVE=$(pwd)/../kernel-6.6/
 
 GRAMINEDIR=$(pwd)/../gramine/
+
+LLAMA2_DIR=$(pwd)/../llama.cpp/
