flags CONFIG_ENCOS; now revert back to the normal kernel

--- a/kernel/arch/Kconfig
+++ b/kernel/arch/Kconfig
@@ -12,7 +12,7 @@ source "arch/$(SRCARCH)/Kconfig"
 menu "General architecture-dependent options"
 
 config ENCOS
-	def_bool y
+	def_bool n
 	help
 	  Enclave nested-OS monitor enabled.
 
