--- a/kernel/arch/Kconfig
+++ b/kernel/arch/Kconfig
@@ -19,7 +19,12 @@ config ENCOS
 config ENCOS_PKS
 	def_bool y
 	help
-	  Enclave nested-OS (PKS).
+	  Enclave nested-OS (Protection Key, Supervisor).
+
+config ENCOS_WP
+	def_bool n
+	help
+	  Enclave nested-OS (Write-Protection).
 	
 config ENCOS_MMU
 	def_bool y
