--- a/kernel/arch/Kconfig
+++ b/kernel/arch/Kconfig
@@ -27,7 +27,7 @@ config ENCOS_WP
 	  Enclave nested-OS (Write-Protection).
 	
 config ENCOS_MMU
-	def_bool n
+	def_bool y
 	help
 	  Enclave nested-OS (MMU interposition).
 
