--- a/kernel/arch/Kconfig
+++ b/kernel/arch/Kconfig
@@ -17,7 +17,7 @@ config ENCOS
 	  Enclave nested-OS monitor enabled.
 
 config ENCOS_PKS
-	def_bool n
+	def_bool y
 	help
 	  Enclave nested-OS (Protection Key, Supervisor).
 
