--- a/scripts/.env
+++ b/scripts/.env
@@ -4,6 +4,12 @@ QEMU_DIR=qemu-7.1.0
 VMDISKFOLDER=$(pwd)/vmdisk
 VMDISKMOUNT=$VMDISKFOLDER/mnt
 VMDISK=$VMDISKFOLDER/ubuntu-vm.qcow2
+
+VMDISKFOLDER_TDX=$(pwd)/vmdisk-tdx
+VMDISKMOUNT_TDX=$VMDISKFOLDER_TDX/mnt
+#VMDISK_TDX=$VMDISKFOLDER_TDX/tdx-guest-ubuntu-24.04-generic.qcow2
+VMDISK_TDX=$VMDISKFOLDER_TDX/tdx-backup.qcow2
+
 VMNAME="ubuntu-vm"
 USERNAME="pks"
 PASSWORD="pks"
@@ -15,3 +21,12 @@ LINUXFOLDER_NATIVE=$(pwd)/../kernel-6.6/
 GRAMINEDIR=$(pwd)/../gramine/
 
 LLAMA2_DIR=$(pwd)/../llama.cpp/
+
+
+GREEN='\033[0;32m'
+NC='\033[0m'
+
+# log 函数
+log_info() {
+    echo -e "${GREEN}$1${NC}"
+}
