--- a/scripts/.env
+++ b/scripts/.env
@@ -7,8 +7,7 @@ VMDISK=$VMDISKFOLDER/ubuntu-vm.qcow2
 
 VMDISKFOLDER_TDX=$(pwd)/vmdisk-tdx
 VMDISKMOUNT_TDX=$VMDISKFOLDER_TDX/mnt
-#VMDISK_TDX=$VMDISKFOLDER_TDX/tdx-guest-ubuntu-24.04-generic.qcow2
-VMDISK_TDX=$VMDISKFOLDER_TDX/tdx-backup.qcow2
+VMDISK_TDX=$VMDISKFOLDER_TDX/tdx-guest-ubuntu-24.04-generic.qcow2
 
 VMNAME="ubuntu-vm"
 USERNAME="pks"
@@ -26,7 +25,7 @@ LLAMA2_DIR=$(pwd)/../llama.cpp/
 GREEN='\033[0;32m'
 NC='\033[0m'
 
-# log 函数
+# log
 log_info() {
     echo -e "${GREEN}$1${NC}"
 }
