--- a/kernel/arch/x86/Kconfig
+++ b/kernel/arch/x86/Kconfig
@@ -266,7 +266,7 @@ config X86
 	select HAVE_FUNCTION_ARG_ACCESS_API
 	select HAVE_SETUP_PER_CPU_AREA
 	select HAVE_SOFTIRQ_ON_OWN_STACK
-	select HAVE_STACKPROTECTOR		if CC_HAS_SANE_STACKPROTECTOR
+	# select HAVE_STACKPROTECTOR		if CC_HAS_SANE_STACKPROTECTOR
 	select HAVE_STACK_VALIDATION		if HAVE_OBJTOOL
 	select HAVE_STATIC_CALL
 	select HAVE_STATIC_CALL_INLINE		if HAVE_OBJTOOL
@@ -1233,11 +1233,11 @@ config X86_16BIT
 	  plus 16K runtime memory on x86-64,
 
 config X86_ESPFIX32
-	def_bool y
+	def_bool n
 	depends on X86_16BIT && X86_32
 
 config X86_ESPFIX64
-	def_bool y
+	def_bool n
 	depends on X86_16BIT && X86_64
 
 config X86_VSYSCALL_EMULATION
