--- a/kernel/arch/Kconfig
+++ b/kernel/arch/Kconfig
@@ -22,7 +22,7 @@ config ENCOS_PKS
 	  Enclave nested-OS (Protection Key, Supervisor).
 
 config ENCOS_WP
-	def_bool n
+	def_bool y
 	help
 	  Enclave nested-OS (Write-Protection).
 	
